2005-03-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (call_calltrap, customreset, sim_os_trap, write_log_standard, uae_reset, uae_quit, S_ERR, put,
          put_arg, get_arg): Delete.
        (currprefs): Delete variable.
        (parse_and_set_memory_size): Delete.
        (sim_open): Don't call it.
        (sim_open, sim_set_cpu_variant, sim_info): Delete #if 0'ed currprefs-using code.
        (m68k_go_sim): Call engine_start and gtk_main for the non-single-step case.
        (sim_resume): Stop engine if we started it.
        (sim_create_inferior): Don't initialize registers here. Copy them from regs instead.
        (sim_open): Don't call memory_init and init_m68k here.

2005-03-29  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * Delete in-tree copy of UAE, changes merged into the TiEmu copy.
      * interp.c: Include ../../../uae/libuae.h instead on individual UAE headers.
        (in_m68k_go): Delete declaration.
        (sim_resume): Don't use it.
        (m68k_go_sim): Try to implement in terms of hw_m68k_run, needs proper implementation.
        (sim_resume): Use m68k_go_sim instead of m68k_go.
        (parse_and_set_memory_size, sim_open, sim_create_inferior, sim_info, sim_os_trap): Comment out use of 
                                                                                           chipmem_size.
        (opt_cpu_level): Default to 0.
        (sim_open, sim_set_cpu_variant, sim_info): Comment out uses of cpu_level.
        (sim_create_inferior): Comment out use of msp.
      * ../common/Make-commin.in (all): Don't build run executable.

2005-03-25  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c: Include gdb/callback.h and  gdb/remote-sim.h instead of callback.h and remote-sim.h.
        (sim_open, sim_create_inferior): Use struct bfd, not struct _bfd.
        (call_calltrap): Add missing REGPARAM.
      * gencpu.c (generate_one_opcode): Use REGPARAM, not REGPARAM2.