@@ -81,7 +81,7 @@ void _initialize_interpreter (void);
 /* Variables local to this file: */
 
 static struct interp *interp_list = NULL;
-static struct interp *current_interpreter = NULL;
+struct interp *current_interpreter = NULL;
 
 static int interpreter_initialized = 0;
 
